--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"eslint-plugin-vue": "^9.9.0",
 		"postcss-nesting": "^13.0.1",
 		"prettier": "^2.8.4",
+		"terser": "^5.44.0",
 		"vite": "^4.1.4",
 		"vite-plugin-mkcert": "^1.14.0"
 	}
