--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@codemirror/lang-javascript": "^6.2.4",
 		"@codemirror/lang-json": "^6.0.2",
+		"@codemirror/legacy-modes": "^6.5.2",
 		"codemirror": "^6.0.2",
 		"pako": "^2.1.0",
 		"pinia": "^2.0.32",
