--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@codemirror/lang-json": "^6.0.2",
 		"@codemirror/legacy-modes": "^6.5.2",
 		"@sentry/vue": "^10.27.0",
+		"@replit/codemirror-vim": "^6.3.0",
 		"codemirror": "^6.0.2",
 		"jsfft": "^0.0.4",
 		"pako": "^2.1.0",
