--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@codemirror/lang-javascript": "^6.2.4",
 		"@codemirror/lang-json": "^6.0.2",
 		"@codemirror/legacy-modes": "^6.5.2",
+		"@codemirror/lint": "^6.9.4",
 		"@replit/codemirror-vim": "^6.3.0",
 		"@sentry/vue": "^10.27.0",
 		"codemirror": "^6.0.2",
